k8s/permanent-access/nodeport-services.yaml
# Permanent Access - NodePort Services for ATS Components
# This provides stable external access without requiring port-forward
apiVersion: v1
kind: Service
metadata:
  name: ats-minute-service-external
  namespace: ats-dev
  labels:
    app: ats-minute-service
    access-type: external
spec:
  type: NodePort
  selector:
    app: ats-minute-service
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30081
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: ats-eod-service-external
  namespace: ats-dev
  labels:
    app: ats-eod-service
    access-type: external
spec:
  type: NodePort
  selector:
    app: ats-eod-service
  ports:
  - port: 8082
    targetPort: 8082
    nodePort: 30082
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: ats-analytics-service-external
  namespace: ats-dev
  labels:
    app: ats-analytics-service
    access-type: external
spec:
  type: NodePort
  selector:
    app: ats-analytics-service
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30180
    name: http
---
# Monitoring Stack External Access
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
  namespace: monitoring
  labels:
    app: prometheus
    access-type: external
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30190
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: monitoring
  labels:
    app: grafana
    access-type: external
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: grafana
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30330
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-external
  namespace: argocd
  labels:
    app: argocd-server
    access-type: external
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30800
    name: http
  - port: 443
    targetPort: 8080
    nodePort: 30443
    name: https
